--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,3 +14,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.cursor{
+  cursor: pointer;
+}
